[package]
name = "aeon-state"
description = "Multi-tier state management for Aeon"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/aeon-state"
keywords = ["stream-processing", "state-store", "cache", "mmap"]
categories = ["data-structures", "caching"]

[features]
default = []
mmap = ["memmap2"]
redb = ["dep:redb"]
# S8.3: compile-time gate for the RocksDB L3 backend. Re-exports the
# `aeon-types/rocksdb` feature so the `L3Backend::RocksDb` variant becomes
# visible here. The adapter itself is still a placeholder (FT-7).
rocksdb = ["aeon-types/rocksdb"]

[dependencies]
aeon-types = { workspace = true }
aeon-crypto = { workspace = true }
bytes = { workspace = true }
dashmap = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
memmap2 = { workspace = true, optional = true }
redb = { workspace = true, optional = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = { workspace = true }

[[bench]]
name = "state_bench"
harness = false
